# Strands

./: .gitignore  BENCHMARK_REPORT.md  LICENSE  ROADMAP.md  bdrm-spec.md  pyproject.toml  semantic-strands-spec.md
scripts/: _bench_clone.py  _bench_codesearch.py  _bench_crosslang.py  _bench_sentence.py  _bench_word.py  adapter_benchmark.py  benchmark.py  build_backbone.py  build_codebook.py  build_codon_adjacency.py  build_conceptnet5_adjacency.py  build_strand_relations.py  capture_training_data.py  cn_only.py  comprehensive_benchmark.py  diagnose.py  embed_word_vectors.py  eval_neural_module.py  full_word_benchmark.py  plot_training.py  sentence_baselines.py  sentence_benchmark.py  test_neural_module.py  train_all.py  train_compute_module.py  wordsim_diag.py
strands/: __init__.py  adapters.py  cli.py  code_ast.py  code_encoder.py  code_patterns.py  codebook.py  codon.py  comparator.py  context_shade.py  document.py  encoder.py  identifier.py  index.py  lemmatizer.py  phrases.py  relatedness.py  relations.py  shade.py  strand.py  tokenizer.py  wsd.py
tests/: conftest.py  test_adapters.py  test_backbone.py  test_backbone_beliefs.py  test_backbone_compute_module.py  test_backbone_e2e.py  test_backbone_elaboration.py  test_backbone_inference.py  test_backbone_multiturn.py  test_backbone_question_types.py  test_backbone_response.py  test_backbone_speech_act.py  test_backbone_training.py  test_backbone_yesno.py  test_build_cache.py  test_cli.py  test_code_ast.py  test_code_crosslang.py  test_code_encoder.py  test_codon.py  test_comparator.py  test_compute_pipeline.py  (+14 more)
(+46 files in other folders)
